tests/baselines/reference/derivedClassSuperCallsWithThisArg.errors.txt
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperCallsWithThisArg.ts(8,15): error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperCallsWithThisArg.ts(14,15): error TS2332: 'this' cannot be referenced in current location.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperCallsWithThisArg.ts(14,15): error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperCallsWithThisArg.ts(20,21): error TS2332: 'this' cannot be referenced in current location.


==== tests/cases/conformance/classes/constructorDeclarations/superCalls/derivedClassSuperCallsWithThisArg.ts (4 errors) ====
    class Base {
        x: string;
        constructor(a) { }
    }
    
    class Derived extends Base {
        constructor() {
            super(this); // ok
                  ~~~~
!!! error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
        }
    }
    
    class Derived2 extends Base {
        constructor(public a: string) {
            super(this); // error
                  ~~~~
!!! error TS2332: 'this' cannot be referenced in current location.
                  ~~~~
!!! error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
        }
    }
    
    class Derived3 extends Base {
        constructor(public a: string) {
            super(() => this); // error
                        ~~~~
!!! error TS2332: 'this' cannot be referenced in current location.
        }
    }
    
    class Derived4 extends Base {
        constructor(public a: string) {
            super(function () { return this; }); // ok
        }
    }